@@ -21,6 +21,8 @@
                 <!--Defining JDK version-->
                 <configuration>
                     <release>16</release>
+                    <source>15</source>
+                    <target>15</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -31,6 +33,9 @@
                 <configuration>
                     <!--Defining the main class for JavaFX-->
                     <mainClass>App</mainClass>
+                    <options>
+                        <option>--add-exports javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
+                    </options>
                 </configuration>
             </plugin>
 
@@ -77,6 +82,11 @@
             <groupId>com.gluonhq</groupId>
             <artifactId>charm-glisten</artifactId>
             <version>6.0.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>11.1.0</version>
         </dependency>
     </dependencies>
 
